--- a/ToDoList/Views/Home/FavoritePhotos.cshtml
+++ b/ToDoList/Views/Home/FavoritePhotos.cshtml
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>My To-Do List!</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
@@ -10,7 +9,10 @@
       crossorigin="anonymous">
   </head>
   <body>
-    <h1>Your list has been cleared!</h1>
-    <p><a href="/items">Back to list.</a></p>
+    <h1>Favorite Traveling Photos</h1>
+    <ul>
+      <li><img src='~/img/1.jpg'/></li>
+      <li><img src='~/img/2.jpg'/></li>
+    </ul>
   </body>
 </html>
