--- a/ToDoList/Views/Items/DELETED - Index.cshtml
+++ b/ToDoList/Views/Items/DELETED - Index.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+@* <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -30,4 +30,4 @@
       <button type="submit" name="button">Clear All Items</button>
     </form>
   </body>
-</html>
+</html> *@
